# 20231122_teleco_churn_prediction

./: .copier-answers.yml  .gitignore  Makefile  README.md  config.yaml  requirements.txt  setup.cfg
dataset/01_interim/: churn_test.csv  churn_train.csv  churn_val.csv  ohe_test.csv  ohe_train.csv  ohe_val.csv
models/: feature_pca.pkl  gb_classifier.pkl  gb_classifier_best.pkl
models/scaler/: mm_scaler_MonthlyCharges.pkl  mm_scaler_TotalCharges.pkl  mm_scaler_tenure.pkl
nohup/: what_this.txt
notebooks/exploration/: part00_data_exploration.ipynb  part01_data_splitting.ipynb  part02_feature_engineering.ipynb  part03_algo_implementation.ipynb  part04_hyperparameter_tuning.ipynb  part05_model_bias.ipynb
references/figures/: Churn Prediction Wireframe.bmpr
src/classes/: NpData.py  Outlier.py  TrData.py
src/commons/: Utils.py
