[metadata]
name = telco_churn_prediction
version = 0.0.1
author = putu mahendra
author_email = i.putu.mahendra@gmail.com
description = This project aims to preduct churn in a teleco company using dataset from Kaggle
ticket_url = NA

[options]
packages = find:

[options.packages.find]
include = telco_churn_prediction